assembly/src/snapshots/miden_assembly__tests__push_word_slice.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block
        push(3)
        push(4)
        push(2)
        push(11)
        push(12)
        push(8)
        push(9)
        push(6)
        push(7)
        noop
    end
end
