assembly/src/snapshots/miden_assembly__tests__repeat_basic_blocks_merged.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block mul add add add add add noop noop noop end
end
