assembly/src/snapshots/miden_assembly__tests__simple_constant.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block push(7) noop noop noop noop noop noop noop noop end
end
