assembly/src/snapshots/miden_assembly__tests__simple_instructions-2.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block push(10) push(50) push(2) u32madd drop noop noop noop noop end
end
