assembly/src/snapshots/miden_assembly__tests__simple_instructions.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block pad eqz assert(0) noop noop noop noop noop noop end
end
