assembly/src/snapshots/miden_assembly__tests__single_basic_block.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block pad incr push(2) add noop noop noop noop noop end
end
